--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,22 @@
-/*
+.srs-due {
+  opacity: 0.7;
+  margin-left: 6px;
+  font-size: 0.9em;
+}
 
-This CSS file will be included with your plugin, and
-available in the app when your plugin is enabled.
+.srs-set {
+  margin-bottom: 1.5em;
+  padding: 0.5em;
+  border-bottom: 1px solid var(--divider-color);
+}
 
-If your plugin does not need CSS, delete this file.
+.srs-set-desc {
+  font-size: 0.9em;
+  opacity: 0.7;
+  margin-bottom: 0.5em;
+}
 
-*/
+.srs-note-info {
+  font-size: 0.85em;
+  opacity: 0.8;
+}
